Test to include slides as output for the manual
Hieroglyph allows to embed slides inline with documentation.
Wheter or not this approach makes sense is to be evaluated with
this WIP.

Change-Id: Iee50f8a39d0bdfacc46cd003904de32e45370f6b

--- a/tox.ini
+++ b/tox.ini
@@ -14,3 +14,6 @@ commands = {posargs}
 
 [testenv:docs]
 commands = python setup.py build_sphinx
+
+[testenv:slides]
+commands = sphinx-build -b slides doc/source/ doc/build/slides
