--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # The order of packages is significant, because pip processes them in the order
 # of appearance. Changing the order has an impact on the overall integration
 # process, which may cause wedges in the gate later.
-pbr>=1.6 # Apache-2.0
-oslosphinx
-sphinx!=1.3b1,<1.4,>=1.2.1 # BSD
+pbr>=2.0.0,!=2.1.0  # Apache-2.0
+openstackdocstheme>=1.11.0 # Apache-2.0
+sphinx>=1.6.2 # BSD
