--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ summary = OpenStack Project Infrastructure Manual
 description-file =
     README.rst
 author = OpenStack
-author-email = openstack-infra@lists.openstack.org
+author-email = openstack-discuss@lists.openstack.org
 home-page = http://www.openstack.org/
 classifier =
     Intended Audience :: Developers
