--- a/tox.ini
+++ b/tox.ini
@@ -13,4 +13,5 @@ deps = -r{toxinidir}/requirements.txt
 commands = {posargs}
 
 [testenv:docs]
+basepython = python3
 commands = sphinx-build -W -d doc/build/doctrees -b html doc/source/ doc/build/html
