--- a/setup.cfg
+++ b/setup.cfg
@@ -1,21 +1,12 @@
 [metadata]
 name = infra-manual
-summary = OpenStack Project Infrastructure Manual
+summary = OpenDev Manual
 description-file =
     README.rst
-author = OpenStack
+author = OpenDev
 author-email = openstack-infra@lists.openstack.org
-home-page = http://www.openstack.org/
+home-page = http://www.opendev.org/
 classifier =
     Intended Audience :: Developers
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
-
-[build_sphinx]
-all_files = 1
-build-dir = doc/build
-source-dir = doc/source
-warning-is-error = 1
-
-[wheel]
-universal = 1
